--- a/p8105_hw5_crd2162.Rmd
+++ b/p8105_hw5_crd2162.Rmd
@@ -4,3 +4,40 @@ author: "Caleigh Dwyer"
 date: "2023-11-13"
 output: github_document
 ---
+
+
+```{r, include = FALSE, message = FALSE, warning = FALSE}
+library(tidyverse)
+
+knitr::opts_chunk$set(
+	echo = TRUE,
+	warning = FALSE,
+  fig.width = 6,
+  fig.asp = .6,
+  out.width = "90%"
+)
+
+theme_set(theme_minimal() + theme(legend.position = "bottom"))
+
+options(
+  ggplot2.continuous.colour = "viridis",
+  ggplot2.continuous.fill = "viridis"
+)
+
+scale_colour_discrete = scale_colour_viridis_d
+scale_fill_discrete = scale_fill_viridis_d
+```
+
+##Problem 1: Homicide Data
+
+The chunk below loads data from the Washington Post on homicide trends in the 50 largest US cities. 
+
+```{r}
+murder_data =
+  read_csv("./data/homicide-data.csv") |> 
+  janitor::clean_names() |> 
+  select(-uid, -victim_last, -victim_first)
+```
+
+The dataset contains information on `r murder_data |> nrow()` criminal homicides reported from 2007 to 2015. The dataset describes the race, age, and sex of each victim, the city and state in which the homicide occurred, the exact latitude and longitude of the crime, and the "disposition" of the crime, which describes whether the case is open or closed and whether an arrest was made.
+
