--- a/p8105_hw5_crd2162.Rmd
+++ b/p8105_hw5_crd2162.Rmd
@@ -28,16 +28,42 @@ scale_colour_discrete = scale_colour_viridis_d
 scale_fill_discrete = scale_fill_viridis_d
 ```
 
-##Problem 1: Homicide Data
+## Problem 1: Homicide Data
 
 The chunk below loads data from the Washington Post on homicide trends in the 50 largest US cities. 
 
-```{r}
+```{r load_murder_data}
 murder_data =
   read_csv("./data/homicide-data.csv") |> 
   janitor::clean_names() |> 
-  select(-uid, -victim_last, -victim_first)
+  select(-uid, -victim_last, -victim_first) |> 
+  unite(city_state, city, state, sep = ", ") |> 
+  mutate(city_state = 
+           if_else(
+             city_state == "Tulsa, AL", "Tulsa, OK", city_state
+           ))
 ```
 
-The dataset contains information on `r murder_data |> nrow()` criminal homicides reported from 2007 to 2015. The dataset describes the race, age, and sex of each victim, the city and state in which the homicide occurred, the exact latitude and longitude of the crime, and the "disposition" of the crime, which describes whether the case is open or closed and whether an arrest was made.
+
+The dataset contains information on `r murder_data |> nrow()` criminal homicides reported from 2007 to 2015. The dataset describes the race, age, and sex of each victim, the city and state in which the homicide occurred, the exact latitude and longitude of the crime, and the "disposition" of the crime, which describes whether the case is open or closed and whether an arrest was made. One homicide was misattributed to Tulsa, Alabama when the latitude and longitude indicate that the crime occurred in Oklahoma; this was corrected in the cleaned dataset.
+
+The following chunk summarizes the total number of homicides in each city. Chicago, Philadelphia, Houston, Baltimore, and Detroit had the highest number of total homicides, in that order.
+
+```{r total_murders}
+murder_data |> 
+  count(city_state) |> 
+  arrange(desc(n)) |> 
+  knitr::kable()
+```
+
+The following chunk summarizes the total number of unsolved homicides in each city, or those in which the disposition is "Closed without arrest" or "Open/No arrest". Chicago, Baltimore, Houston, Detroit, and Philadelphia had the highest number of unsolved homicides, in that order.
+
+```{r}
+murder_data |> 
+  filter(disposition %in% c("Closed without arrest", "Open/No arrest")) |> 
+  count(city_state) |> 
+  arrange(desc(n)) |> 
+  knitr::kable()
+```
+
 
