create R object from prop.test and pull estimate & CIs

--- a/p8105_hw5_crd2162.Rmd
+++ b/p8105_hw5_crd2162.Rmd
@@ -77,7 +77,9 @@ murder_data |>
     total_unsolved = sum(
            disposition %in% c("Closed without arrest", "Open/No arrest")
          )) |> 
-  with(prop.test(total_unsolved,total_murder))
+  with(prop.test(total_unsolved,total_murder)) |> 
+  broom::tidy() |> 
+  select(estimate, conf.low, conf.high)
   
 ```
 
