--- a/p8105_hw5_crd2162.md
+++ b/p8105_hw5_crd2162.md
@@ -104,7 +104,9 @@ murder_data |>
 
 The following chunk summarizes the total number of unsolved homicides in
 each city, or those in which the disposition is “Closed without arrest”
-or “Open/No arrest”.
+or “Open/No arrest”. Chicago, Baltimore, Houston, Detroit, and
+Philadelphia had the highest number of unsolved homicides, in that
+order.
 
 ``` r
 murder_data |> 
@@ -166,3 +168,20 @@ murder_data |>
 | Richmond, VA       |  113 |
 | Durham, NC         |  101 |
 | Tampa, FL          |   95 |
+
+We will now use the prop.test function to estimate the proportion of
+homicides that are unsolved in Baltimore, MD.
+
+``` r
+prop_murder =
+murder_data |> 
+  filter(city_state == "Baltimore, MD") |> 
+  summarize(
+    total_murder = n(),
+    total_unsolved = sum(
+           disposition %in% c("Closed without arrest", "Open/No arrest")
+         )) |> 
+  with(prop.test(total_unsolved,total_murder)) |> 
+  broom::tidy() |> 
+  select(estimate, conf.low, conf.high)
+```
