--- a/p8105_hw5_crd2162.md
+++ b/p8105_hw5_crd2162.md
@@ -170,10 +170,12 @@ murder_data |>
 | Tampa, FL          |   95 |
 
 We will now use the prop.test function to estimate the proportion of
-homicides that are unsolved in Baltimore, MD.
+homicides that are unsolved in Baltimore, MD. The estimated proportion
+of unsolved homicides in Baltimore was 64.6% with a confidence interval
+of 62.8%-66.3%
 
 ``` r
-prop_murder =
+prop_bmd =
 murder_data |> 
   filter(city_state == "Baltimore, MD") |> 
   summarize(
@@ -184,4 +186,60 @@ murder_data |>
   with(prop.test(total_unsolved,total_murder)) |> 
   broom::tidy() |> 
   select(estimate, conf.low, conf.high)
+
+print(prop_bmd)
 ```
+
+    ## # A tibble: 1 × 3
+    ##   estimate conf.low conf.high
+    ##      <dbl>    <dbl>     <dbl>
+    ## 1    0.646    0.628     0.663
+
+The chunk below creates a function that applies the prop.test used
+above, producing the estimated proportion of unsolved murders for each
+input along with the confidence interval. Then, map is used to pass a
+list of the 50 cities through the function, producing the output for
+each city. The outputs are then consolidated into a tibble.
+
+``` r
+# function 
+prop_function <- function(dataset, name) {
+  prop = dataset |> 
+  filter(city_state == name) |> 
+  summarize(
+    total_murder = n(),
+    total_unsolved = sum(
+           disposition %in% c("Closed without arrest", "Open/No arrest")
+         )) |> 
+  with(prop.test(total_unsolved,total_murder)) |> 
+  broom::tidy() |> 
+  select(estimate, conf.low, conf.high)
+  return(prop)
+}
+
+cities = unique(murder_data$city_state)
+table = map(cities, ~ prop_function(murder_data, .x))
+
+# Using list columns
+# Unnesting the list column
+prob_unsolved = 
+  tibble(city = cities, prop = table) |> 
+  unnest(cols = c(prop))
+```
+
+The chunk below produces a plot showing the estimates and confidence
+intervals for each city.
+
+``` r
+unsolved_plot =
+  prob_unsolved |> 
+  mutate(city = forcats::fct_reorder(city, estimate)) |> 
+ggplot(aes(x = city, y = estimate, fill = city))+
+  geom_bar(stat = "identity")+
+  labs(title = "Estimated proportion of unsolved murders by city", x = "City", y = "Proportion of murders that are unsolved") +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+
+print(unsolved_plot)
+```
+
+<img src="p8105_hw5_crd2162_files/figure-gfm/unnamed-chunk-5-1.png" width="90%" />
