--- a/p8105_hw5_crd2162.md
+++ b/p8105_hw5_crd2162.md
@@ -236,6 +236,11 @@ unsolved_plot =
   mutate(city = forcats::fct_reorder(city, estimate)) |> 
 ggplot(aes(x = city, y = estimate, fill = city))+
   geom_bar(stat = "identity")+
+   geom_errorbar(
+    aes(ymin = conf.low, ymax = conf.high),
+    position = position_dodge(width = 0.9),
+    width = 0.25
+  ) +
   labs(title = "Estimated proportion of unsolved murders by city", x = "City", y = "Proportion of murders that are unsolved") +
   theme(axis.text.x = element_text(angle = 45, hjust = 1))
 
