--- a/p8105_hw5_crd2162.md
+++ b/p8105_hw5_crd2162.md
@@ -203,7 +203,7 @@ each city. The outputs are then consolidated into a tibble.
 
 ``` r
 # function 
-prop_function <- function(dataset, name) {
+prop_function = function(dataset, name) {
   prop = dataset |> 
   filter(city_state == name) |> 
   summarize(
@@ -227,8 +227,13 @@ prob_unsolved =
   unnest(cols = c(prop))
 ```
 
-The chunk below produces a plot showing the estimates and confidence
-intervals for each city.
+The chunk below produces a graph showing the estimated proportion of
+unsolved murders for each city (on a scale of 0 to 1) along with
+corresponding confidence intervals. The graph shows that Chicago, New
+Orleans, Baltimore, San Bernardino, and Buffalo had the five highest
+proportions of unsolved murders. Notably, the confidence interval for
+the proportion of unsolved murders was very narrow for Chicago and much
+wider for San Bernardino and Buffalo.
 
 ``` r
 unsolved_plot =
@@ -248,3 +253,69 @@ print(unsolved_plot)
 ```
 
 <img src="p8105_hw5_crd2162_files/figure-gfm/unnamed-chunk-5-1.png" width="90%" />
+
+## Problem 2:Experimental data
+
+The following chunk uses a function to read multiple csv files from a
+zip folder. Each .csv file represents longitudinal data for either a
+control or experimental group subject.
+
+``` r
+zip_data =
+list.files(path = "./data/data_csv", full.names = TRUE)
+
+#example
+subject_data = 
+    read_csv("./data/data_csv/con_01.csv") |> 
+    janitor::clean_names()
+  
+# function 
+read_function = function(filename) {
+  subject_data = 
+    read_csv(filename) |> 
+    janitor::clean_names()
+  return(subject_data)
+}
+
+#map
+
+table = map(zip_data, ~ read_function(.x))
+
+all_data = 
+  tibble(subject = zip_data, subject_data = table) |> 
+  unnest(cols = c(subject_data))
+```
+
+The combined dataset containing data for all subjects will be tidied in
+the following chunk.The subject ID was pulled from the file name,
+creating a new column called “id”. The experimental group was then
+pulled from the “id,” creating a new column called “group”.
+
+``` r
+tidy_data =
+  all_data |> 
+  mutate(
+    id = sub(".csv", "", basename(subject)),
+    group = ifelse(str_detect(id, "^exp"), "experimental", "control")) |> 
+  pivot_longer(week_1:week_8,
+               names_to = "time_point",
+               values_to = "observation") |> 
+  select(id, group, everything(), -subject)
+```
+
+A spaghetti plot is created in the chunk below showing observations on
+each subject over time by group.
+
+``` r
+subject_graph =
+  tidy_data |> 
+  ggplot(aes(x = time_point, y = observation, group = id, color = group))+
+  geom_point()+
+  geom_line()+
+  labs(title = "Changes in observation by subject and group over 8 weeks", x = "Week", y = "Observation") +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+
+print(subject_graph)
+```
+
+<img src="p8105_hw5_crd2162_files/figure-gfm/unnamed-chunk-8-1.png" width="90%" />
